make free consultation form resonsive and add animation to it based on intersection observer

--- a/src/basicStyles/App.css
+++ b/src/basicStyles/App.css
@@ -33,6 +33,12 @@ ul {
   transform: translate(0%, 0%);
   opacity: 1; }
 
+.show-form-section div[class*="section-title-and-description"],
+.show-form-section div[class*="imgbox"] {
+  transform: translateX(0%);
+  opacity: 1;
+  transition: all 0.8s ease-out; }
+
 @media (min-width: 37em) {
   .reverse {
     flex-direction: column !important; }
