--- a/src/components/form/Form.module.css
+++ b/src/components/form/Form.module.css
@@ -1,11 +1,10 @@
 .form-container {
   position: relative;
   width: 100%;
-  aspect-ratio: 16/22;
+  aspect-ratio: 16/21;
   clip-path: polygon(0 5%, 100% 0, 100% 100%, 0% 100%);
   padding: 2.5rem;
-  overflow: hidden !important;
-  backdrop-filter: blur(0px); }
+  overflow: hidden !important; }
   .form-container__imgbox {
     width: 100%;
     height: 100%;
@@ -14,31 +13,38 @@
     left: 0;
     background-repeat: no-repeat !important;
     background-position: 50% 100% !important;
-    background-size: cover !important; }
+    background-size: cover !important;
+    padding: 2rem;
+    backdrop-filter: blur(0px); }
   .form-container__form {
-    display: block;
     width: 100%;
     height: 100%;
     background-color: rgba(34, 34, 34, 0.85);
-    backdrop-filter: blur(0.4rem);
+    backdrop-filter: blur(0.2rem);
     clip-path: polygon(0 5%, 100% 0, 100% 100%, 0% 100%) !important;
-    position: relative;
-    transition: all 0.2s ease-out;
-    overflow: hidden !important; }
+    overflow: hidden !important;
+    position: relative; }
+    .form-container__form label span {
+      font-size: 1.5rem; }
+    .form-container__form label input {
+      font-size: 1.4rem !important; }
+      .form-container__form label input::placeholder {
+        font-size: 1.4rem !important; }
+    .form-container__form label select {
+      font-size: 1.4rem !important; }
     .form-container__form__basic-information, .form-container__form__additional-information, .form-container__form__success-message {
       display: flex;
       flex-direction: column;
       width: 100%;
+      height: 100%;
       position: absolute;
-      gap: 2.5rem;
+      gap: 2rem;
       top: 0;
       left: 0;
-      padding: 5.5rem 3rem;
-      transition: all 0.4s; }
+      padding: 5.5rem 3rem; }
     .form-container__form__success-message {
       gap: 0 !important;
       color: #fff;
-      padding: 3rem;
       align-items: center; }
       .form-container__form__success-message__checkbox {
         width: 5rem;
@@ -66,17 +72,16 @@
         letter-spacing: 0.02rem;
         font-weight: 400;
         margin-bottom: 2.5rem; }
-    .form-container__form div[class*="submit-button"] {
-      margin-top: 1rem; }
 
 .visible {
   opacity: 1;
   visibility: visible;
-  transition: all 0.4s 0.4s; }
+  transition: all 0.2s 0.2s; }
 
 .hidden {
   opacity: 0;
-  visibility: collapse; }
+  visibility: collapse;
+  transition: all 0.2s; }
 
 .final-background {
   backdrop-filter: blur(1rem) !important;
@@ -84,28 +89,110 @@
 
 @media (max-width: 24em) {
   .form-container {
-    aspect-ratio: 16/24; }
-    .form-container__form__basic-information, .form-container__form__additional-information, .form-container__form__success-message {
-      padding: 5.5rem 2.2rem; } }
+    aspect-ratio: 16/22; } }
 @media (min-width: 27em) {
   .form-container {
-    aspect-ratio: 16/21 !important; } }
+    aspect-ratio: 16/19 !important; } }
 @media (min-width: 30em) {
   .form-container {
-    aspect-ratio: 16/18 !important; }
-    .form-container__form__basic-information, .form-container__form__additional-information, .form-container__form__success-message {
-      padding: 5.5rem 3rem; } }
-@media (min-width: 37em) {
-  .form-container {
-    aspect-ratio: 16/15 !important; }
-    .form-container__form label {
-      font-size: 1.7rem; }
-      .form-container__form label input::placeholder {
-        font-size: 1.5rem !important; }
-      .form-container__form label p[class*="error"],
-      .form-container__form label p[class*="success"] {
-        font-size: 1.5rem !important; }
+    aspect-ratio: 16/17 !important; }
     .form-container__form__basic-information, .form-container__form__additional-information, .form-container__form__success-message {
       padding: 5.5rem 4rem; } }
+@media (min-width: 37em) {
+  .form-container {
+    aspect-ratio: 16/14 !important; }
+    .form-container__form label span {
+      font-size: 1.7rem; }
+    .form-container__form label input::placeholder {
+      font-size: 1.5rem !important; }
+    .form-container__form label p[class*="error"],
+    .form-container__form label p[class*="success"] {
+      font-size: 1.5rem !important; } }
+@media (min-width: 45em) {
+  .form-container {
+    aspect-ratio: 16/12 !important; } }
+@media (min-width: 48em) {
+  .form-container {
+    aspect-ratio: 16/11 !important;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 2.5rem;
+    position: static;
+    width: 100%;
+    clip-path: none;
+    padding: 0;
+    overflow: hidden !important;
+    backdrop-filter: unset; }
+    .form-container .section-title-and-description {
+      flex-basis: 50%;
+      transform: translateX(-10%);
+      opacity: 0; }
+    .form-container__imgbox {
+      clip-path: polygon(0 5%, 100% 0, 100% 100%, 0% 100%);
+      flex-basis: 50%;
+      position: static;
+      top: unset;
+      left: unset;
+      transform: translateX(10%);
+      opacity: 0; }
+    .form-container__form__basic-information, .form-container__form__additional-information, .form-container__form__success-message {
+      padding: 5.5rem 3rem; }
+    .form-container__form label span {
+      font-size: 1.5rem;
+      font-weight: 400; }
+    .form-container__form label input {
+      font-size: 1.4rem !important; }
+      .form-container__form label input::placeholder {
+        font-size: 1.4rem !important; }
+    .form-container__form label select {
+      font-size: 1.4rem !important; }
+    .form-container__form label p[class*="error"] {
+      font-size: 1.4rem !important; }
+    .form-container__form__success-message__checkbox {
+      margin-bottom: 3rem; }
+    .form-container__form__success-message__details {
+      font-size: 1.45rem;
+      line-height: 1.5;
+      font-weight: 400 !important;
+      letter-spacing: 0.02rem; } }
+@media (min-width: 50em) {
+  .form-container {
+    aspect-ratio: 16/10 !important; } }
+@media (min-width: 62em) {
+  .form-container {
+    aspect-ratio: 16/8.2 !important;
+    gap: 5rem; }
+    .form-container__imgbox {
+      background-position: 0% 80% !important; } }
+@media (min-width: 64em) {
+  .form-container {
+    aspect-ratio: 16/8 !important;
+    justify-content: space-evenly;
+    gap: 2rem; }
+    .form-container .section-title-and-description {
+      flex-basis: 50% !important; }
+    .form-container__form {
+      clip-path: unset !important; }
+      .form-container__form__basic-information, .form-container__form__additional-information, .form-container__form__success-message {
+        padding: 3rem; }
+    .form-container__imgbox {
+      padding: 2.5rem;
+      flex-basis: 50%;
+      height: 100%;
+      clip-path: unset !important;
+      background-position: 0% 50% !important; } }
+@media (min-width: 65em) {
+  .form-container {
+    aspect-ratio: 16/7.5 !important; }
+    .form-container .section-title-and-description {
+      flex-basis: 50% !important; }
+    .form-container__imgbox {
+      padding: 2.5rem;
+      flex-basis: 50%; } }
+@media (min-width: 77em) {
+  .form-container {
+    aspect-ratio: 16/6.7 !important;
+    gap: 2.5rem; } }
 
 /*# sourceMappingURL=Form.module.css.map */
