--- a/src/components/inputBox/InputBox.module.css
+++ b/src/components/inputBox/InputBox.module.css
@@ -21,7 +21,7 @@
     color: #fff;
     font-weight: 400; }
   .inputbox-container__label {
-    margin-bottom: 1rem; }
+    margin-bottom: 1.2rem; }
   .inputbox-container input,
   .inputbox-container input[type="text"],
   .inputbox-container input[type="email"],
@@ -39,9 +39,9 @@
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
     box-shadow: none;
-    margin-bottom: 1rem;
     opacity: 0.7;
-    transition: all 0.2s ease-out; }
+    transition: all 0.2s ease-out;
+    margin-bottom: 1rem; }
     .inputbox-container input::placeholder,
     .inputbox-container input[type="text"]::placeholder,
     .inputbox-container input[type="email"]::placeholder,
