--- a/src/components/selectBox/SelectBox.module.scss
+++ b/src/components/selectBox/SelectBox.module.scss
@@ -4,13 +4,17 @@
 .selectbox-container {
   width: 100%;
 
+  &__label {
+    margin-bottom: 1.2rem;
+  }
+
   label {
     display: inline-flex;
     flex-direction: column;
     width: 100%;
     font-size: 1.65rem;
     color: $white;
-    gap: 1rem;
+
     letter-spacing: 0.05rem;
   }
 
@@ -40,6 +44,7 @@
     -moz-box-shadow: none;
     box-shadow: none;
     transition: $basic;
+    margin-bottom: 1rem;
 
     * {
       background-color: $darkText;
