--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -184,12 +184,27 @@
         transform: translate(-10%, 0%);
         left: initial; }
 
+  .form-section {
+    margin-bottom: 10rem; }
+    .form-section div[class*="desktop-center"] {
+      width: unset !important; }
+    .form-section div[class*="section-title"] {
+      margin-bottom: 1.2rem; }
+      .form-section div[class*="section-title"] h2 {
+        font-size: 2.6rem;
+        margin: 0 !important; }
+    .form-section div[class*="plain-description-box"] {
+      margin-bottom: 3rem; }
+
   .testimonial {
     max-width: 80rem;
     padding: 0 5rem;
-    margin: 0 auto 5rem; }
+    margin: 0 auto 3rem; }
     .testimonial__all-testimonials {
-      gap: 5rem; } }
+      gap: 5rem; }
+
+  .form-section {
+    margin-top: 1rem; } }
 @media (min-width: 62em) {
   .our-services__service-container {
     position: relative;
@@ -252,9 +267,18 @@
 @media (min-width: 64em) {
   .testimonial {
     max-width: 124rem;
-    padding: 0 2rem; }
+    padding: 0 2rem;
+    margin-bottom: 3rem; }
     .testimonial__all-testimonials {
       gap: 2rem;
-      row-gap: 4rem; } }
+      row-gap: 4rem; }
+
+  .form-section {
+    max-width: 124rem;
+    padding: 0 2rem;
+    margin: 3rem auto 10rem auto; } }
+@media (min-width: 65em) {
+  .testimonial__all-testimonials {
+    justify-content: space-between; } }
 
 /*# sourceMappingURL=Home.module.css.map */
