--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -288,14 +288,37 @@
     }
   }
 
+  .form-section {
+    margin-bottom: 10rem;
+
+    div[class*="desktop-center"] {
+      width: unset !important;
+    }
+
+    div[class*="section-title"] {
+      margin-bottom: 1.2rem;
+      h2 {
+        font-size: 2.6rem;
+        margin: 0 !important;
+      }
+    }
+    div[class*="plain-description-box"] {
+      margin-bottom: 3rem;
+    }
+  }
+
   .testimonial {
     max-width: 80rem; // because there needs to be 2 rem of padding on both side, can't do it with margin because margin auto is centering the element
     padding: 0 5rem;
-    margin: 0 auto $sectionMargin;
+    margin: 0 auto 3rem;
 
     &__all-testimonials {
       gap: 5rem;
     }
+  }
+
+  .form-section {
+    margin-top: 1rem;
   }
 }
 
@@ -388,11 +411,26 @@
 @media (min-width: 64em) {
   .testimonial {
     max-width: 124rem;
-    // margin: 0 auto;
     padding: 0 2rem;
+    margin-bottom: 3rem;
+
     &__all-testimonials {
       gap: 2rem;
       row-gap: 4rem;
+    }
+  }
+
+  .form-section {
+    max-width: 124rem;
+    padding: 0 2rem;
+    margin: 3rem auto 10rem auto;
+  }
+}
+
+@media (min-width: 65em) {
+  .testimonial {
+    &__all-testimonials {
+      justify-content: space-between;
     }
   }
 }
