--- a/src/basicStyles/index.css
+++ b/src/basicStyles/index.css
@@ -4,7 +4,8 @@
 *::after {
   padding: 0;
   margin: 0;
-  box-sizing: border-box; }
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
 
 html {
   font-size: 62.5%;
@@ -26,8 +27,13 @@ body {
   height: 100%; }
   #root .App {
     min-height: 100vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     /* margin-top: auto FOR footer */ }
 
 @media (max-width: 23em) {
