--- a/src/components/backdropBlur/BackdropBlur.module.css
+++ b/src/components/backdropBlur/BackdropBlur.module.css
@@ -6,10 +6,12 @@
   top: 0;
   left: 0;
   background-color: rgba(17, 17, 17, 0.36);
-  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+          backdrop-filter: blur(4px);
   z-index: 1000;
   visibility: hidden;
   opacity: 0;
+  -webkit-transition: opacity 0.25s, visibility 0s linear 0.25s;
   transition: opacity 0.25s, visibility 0s linear 0.25s; }
 
 .backdrop-blur-short {
@@ -20,15 +22,18 @@
   bottom: 0;
   left: 0;
   background-color: rgba(17, 17, 17, 0.36);
-  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+          backdrop-filter: blur(4px);
   z-index: 999;
   visibility: hidden;
   opacity: 0;
+  -webkit-transition: opacity 0.25s, visibility 0s linear 0.25s;
   transition: opacity 0.25s, visibility 0s linear 0.25s; }
 
 .show {
   visibility: visible !important;
   opacity: 1 !important;
+  -webkit-transition: opacity 0.8s ease, visibility 0s;
   transition: opacity 0.8s ease, visibility 0s; }
 
 /*# sourceMappingURL=BackdropBlur.module.css.map */
