--- a/src/components/mobileFooter/MobileFooter.module.scss
+++ b/src/components/mobileFooter/MobileFooter.module.scss
@@ -4,6 +4,7 @@
 .mobile-footer {
   background-color: $primary;
   padding: 0rem 0rem 3rem;
+  margin-top: auto;
 
   &__address-part {
     margin-bottom: 3rem;
