--- a/src/basicStyles/App.css
+++ b/src/basicStyles/App.css
@@ -11,39 +11,61 @@ ul {
   list-style-type: none; }
 
 .reverse {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row-reverse !important; }
+  -webkit-box-orient: horizontal !important;
+  -webkit-box-direction: reverse !important;
+      -ms-flex-direction: row-reverse !important;
+          flex-direction: row-reverse !important; }
   .reverse div[class*="text-container"] {
-    align-items: flex-start; }
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start; }
     .reverse div[class*="text-container"] p {
       text-align: left; }
 
 .show-service div[class*="showcase"] div[class*="showcase__imgbox"] {
-  transform: translate(0%, 0%);
-  opacity: 1; }
+  -webkit-transform: translate(0%, 0%);
+          transform: translate(0%, 0%);
+  opacity: 1;
+  -webkit-transition: all 0.8s ease-out;
+  transition: all 0.8s ease-out; }
 .show-service div[class*="textbox"] {
   opacity: 1;
-  transform: translate(0%, 0%); }
+  -webkit-transform: translate(0%, 0%);
+          transform: translate(0%, 0%);
+  -webkit-transition: all 0.8s ease-out;
+  transition: all 0.8s ease-out; }
 
 .show-testimonial-elements {
-  transform: translate(0%, 0%);
+  -webkit-transform: translate(0%, 0%);
+          transform: translate(0%, 0%);
   opacity: 1; }
 
 .show-testimonial-section {
-  transform: translate(0%, 0%);
+  -webkit-transform: translate(0%, 0%);
+          transform: translate(0%, 0%);
   opacity: 1; }
 
 .show-form-section div[class*="section-title-and-description"],
 .show-form-section div[class*="imgbox"] {
-  transform: translateX(0%);
+  -webkit-transform: translateX(0%);
+          transform: translateX(0%);
   opacity: 1;
+  -webkit-transition: all 0.8s ease-out;
   transition: all 0.8s ease-out; }
 
 @media (min-width: 37em) {
   .reverse {
-    flex-direction: column !important; }
+    -webkit-box-orient: vertical !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-direction: column !important;
+            flex-direction: column !important; }
     .reverse div[class*="text-container"] {
-      align-items: stretch; }
+      -webkit-box-align: stretch;
+          -ms-flex-align: stretch;
+              align-items: stretch; }
       .reverse div[class*="text-container"] p {
         text-align: unset; } }
 
