--- a/src/components/address/Address.module.css
+++ b/src/components/address/Address.module.css
@@ -1,11 +1,19 @@
 .address-main {
   background: rgba(34, 34, 34, 0.8);
-  backdrop-filter: blur(2px);
+  -webkit-backdrop-filter: blur(2px);
+          backdrop-filter: blur(2px);
   text-align: center;
   aspect-ratio: 16/13;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin: auto;
   padding: 2rem 0; }
   .address-main__company-name {
@@ -29,8 +37,13 @@
       margin-bottom: 1rem;
       letter-spacing: 0.02rem; }
     .address-main__address__contact-details__phone-email {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      flex-direction: column;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
       line-height: 1.4; }
       .address-main__address__contact-details__phone-email a:link,
       .address-main__address__contact-details__phone-email a:visited {
