--- a/src/components/form/Form.module.css
+++ b/src/components/form/Form.module.css
@@ -2,9 +2,7 @@
   position: relative;
   width: 100%;
   aspect-ratio: 16/21;
-  clip-path: polygon(0 5%, 100% 0, 100% 100%, 0% 100%);
-  padding: 2.5rem;
-  overflow: hidden !important; }
+  padding: 2.5rem; }
   .form-container__imgbox {
     width: 100%;
     height: 100%;
@@ -15,26 +13,42 @@
     background-position: 50% 100% !important;
     background-size: cover !important;
     padding: 2rem;
-    backdrop-filter: blur(0px); }
+    -webkit-clip-path: polygon(0 5%, 100% 0, 100% 100%, 0% 100%);
+            clip-path: polygon(0 5%, 100% 0, 100% 100%, 0% 100%);
+    -webkit-backdrop-filter: blur(0px);
+            backdrop-filter: blur(0px); }
   .form-container__form {
     width: 100%;
     height: 100%;
     background-color: rgba(34, 34, 34, 0.85);
-    backdrop-filter: blur(0.2rem);
-    clip-path: polygon(0 5%, 100% 0, 100% 100%, 0% 100%) !important;
+    -webkit-backdrop-filter: blur(0.2rem);
+            backdrop-filter: blur(0.2rem);
+    -webkit-clip-path: polygon(0 5%, 100% 0, 100% 100%, 0% 100%) !important;
+            clip-path: polygon(0 5%, 100% 0, 100% 100%, 0% 100%) !important;
     overflow: hidden !important;
     position: relative; }
     .form-container__form label span {
       font-size: 1.5rem; }
     .form-container__form label input {
       font-size: 1.4rem !important; }
+      .form-container__form label input::-webkit-input-placeholder {
+        font-size: 1.4rem !important; }
+      .form-container__form label input:-ms-input-placeholder {
+        font-size: 1.4rem !important; }
+      .form-container__form label input::-ms-input-placeholder {
+        font-size: 1.4rem !important; }
       .form-container__form label input::placeholder {
         font-size: 1.4rem !important; }
     .form-container__form label select {
       font-size: 1.4rem !important; }
     .form-container__form__basic-information, .form-container__form__additional-information, .form-container__form__success-message {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      flex-direction: column;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
       width: 100%;
       height: 100%;
       position: absolute;
@@ -45,13 +59,21 @@
     .form-container__form__success-message {
       gap: 0 !important;
       color: #fff;
-      align-items: center; }
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center; }
       .form-container__form__success-message__checkbox {
         width: 5rem;
         aspect-ratio: 16/16;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        justify-content: center;
-        align-items: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
         border-radius: 50%;
         overflow: hidden;
         background-color: #af0061;
@@ -76,15 +98,19 @@
 .visible {
   opacity: 1;
   visibility: visible;
+  -webkit-transition: all 0.2s 0.2s;
   transition: all 0.2s 0.2s; }
 
 .hidden {
   opacity: 0;
   visibility: collapse;
+  -webkit-transition: all 0.2s;
   transition: all 0.2s; }
 
 .final-background {
-  backdrop-filter: blur(1rem) !important;
+  -webkit-backdrop-filter: blur(1rem) !important;
+          backdrop-filter: blur(1rem) !important;
+  -webkit-transition: all 0.4s;
   transition: all 0.4s; }
 
 @media (max-width: 24em) {
@@ -103,6 +129,12 @@
     aspect-ratio: 16/14 !important; }
     .form-container__form label span {
       font-size: 1.7rem; }
+    .form-container__form label input::-webkit-input-placeholder {
+      font-size: 1.5rem !important; }
+    .form-container__form label input:-ms-input-placeholder {
+      font-size: 1.5rem !important; }
+    .form-container__form label input::-ms-input-placeholder {
+      font-size: 1.5rem !important; }
     .form-container__form label input::placeholder {
       font-size: 1.5rem !important; }
     .form-container__form label p[class*="error"],
@@ -114,27 +146,36 @@
 @media (min-width: 48em) {
   .form-container {
     aspect-ratio: 16/11 !important;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     gap: 2.5rem;
     position: static;
     width: 100%;
-    clip-path: none;
     padding: 0;
-    overflow: hidden !important;
-    backdrop-filter: unset; }
+    -webkit-backdrop-filter: unset;
+            backdrop-filter: unset; }
     .form-container .section-title-and-description {
-      flex-basis: 50%;
-      transform: translateX(-10%);
+      -ms-flex-preferred-size: 50%;
+          flex-basis: 50%;
+      -webkit-transform: translateX(-15%);
+              transform: translateX(-15%);
       opacity: 0; }
     .form-container__imgbox {
-      clip-path: polygon(0 5%, 100% 0, 100% 100%, 0% 100%);
-      flex-basis: 50%;
+      -ms-flex-preferred-size: 50%;
+          flex-basis: 50%;
       position: static;
       top: unset;
       left: unset;
-      transform: translateX(10%);
+      -webkit-transform: translateX(15%);
+              transform: translateX(15%);
       opacity: 0; }
     .form-container__form__basic-information, .form-container__form__additional-information, .form-container__form__success-message {
       padding: 5.5rem 3rem; }
@@ -143,6 +184,12 @@
       font-weight: 400; }
     .form-container__form label input {
       font-size: 1.4rem !important; }
+      .form-container__form label input::-webkit-input-placeholder {
+        font-size: 1.4rem !important; }
+      .form-container__form label input:-ms-input-placeholder {
+        font-size: 1.4rem !important; }
+      .form-container__form label input::-ms-input-placeholder {
+        font-size: 1.4rem !important; }
       .form-container__form label input::placeholder {
         font-size: 1.4rem !important; }
     .form-container__form label select {
@@ -168,31 +215,40 @@
 @media (min-width: 64em) {
   .form-container {
     aspect-ratio: 16/8 !important;
-    justify-content: space-evenly;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
     gap: 2rem; }
     .form-container .section-title-and-description {
-      flex-basis: 50% !important; }
-    .form-container__form {
-      clip-path: unset !important; }
-      .form-container__form__basic-information, .form-container__form__additional-information, .form-container__form__success-message {
-        padding: 3rem; }
+      -ms-flex-preferred-size: 50% !important;
+          flex-basis: 50% !important; }
+    .form-container__form__basic-information, .form-container__form__additional-information, .form-container__form__success-message {
+      padding: 5rem 3rem; }
     .form-container__imgbox {
       padding: 2.5rem;
-      flex-basis: 50%;
+      -ms-flex-preferred-size: 50%;
+          flex-basis: 50%;
       height: 100%;
-      clip-path: unset !important;
       background-position: 0% 50% !important; } }
 @media (min-width: 65em) {
   .form-container {
-    aspect-ratio: 16/7.5 !important; }
-    .form-container .section-title-and-description {
-      flex-basis: 50% !important; }
-    .form-container__imgbox {
-      padding: 2.5rem;
-      flex-basis: 50%; } }
+    aspect-ratio: 16/7.5 !important; } }
 @media (min-width: 77em) {
   .form-container {
     aspect-ratio: 16/6.7 !important;
-    gap: 2.5rem; } }
+    gap: 8rem !important;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+    .form-container__imgbox {
+      -webkit-clip-path: polygon(0 7.5%, 100% 0, 100% 100%, 0% 100%);
+              clip-path: polygon(0 7.5%, 100% 0, 100% 100%, 0% 100%);
+      -ms-flex-preferred-size: 45%;
+          flex-basis: 45%; }
+    .form-container__form {
+      -webkit-clip-path: inherit !important;
+              clip-path: inherit !important; }
+      .form-container__form__basic-information, .form-container__form__additional-information, .form-container__form__success-message {
+        padding: 7rem 3rem; } }
 
 /*# sourceMappingURL=Form.module.css.map */
