--- a/src/components/form/Form.module.scss
+++ b/src/components/form/Form.module.scss
@@ -5,9 +5,8 @@
   position: relative;
   width: 100%;
   aspect-ratio: 16/21;
-  clip-path: polygon(0 5%, 100% 0, 100% 100%, 0% 100%);
+
   padding: 2.5rem;
-  overflow: hidden !important;
 
   &__imgbox {
     width: 100%;
@@ -19,6 +18,7 @@
     background-position: 50% 100% !important;
     background-size: cover !important;
     padding: 2rem;
+    clip-path: polygon(0 5%, 100% 0, 100% 100%, 0% 100%);
     backdrop-filter: blur(
       0px
     ); // because the blur filter of form element extends beyond the clipped path
@@ -184,24 +184,23 @@
     gap: 2.5rem;
     position: static;
     width: 100%;
-    clip-path: none;
+
     padding: 0;
-    overflow: hidden !important;
+
     backdrop-filter: unset;
 
     .section-title-and-description {
       flex-basis: 50%;
-      transform: translateX(-10%);
+      transform: translateX(-15%);
       opacity: 0;
     }
 
     &__imgbox {
-      clip-path: polygon(0 5%, 100% 0, 100% 100%, 0% 100%);
       flex-basis: 50%;
       position: static;
       top: unset;
       left: unset;
-      transform: translateX(10%);
+      transform: translateX(15%);
       opacity: 0;
     }
 
@@ -277,13 +276,12 @@
     .section-title-and-description {
       flex-basis: 50% !important;
     }
-    &__form {
-      clip-path: unset !important;
 
+    &__form {
       &__basic-information,
       &__additional-information,
       &__success-message {
-        padding: 3rem;
+        padding: 5rem 3rem;
       }
     }
 
@@ -291,7 +289,6 @@
       padding: 2.5rem;
       flex-basis: 50%;
       height: 100%;
-      clip-path: unset !important;
       background-position: 0% 50% !important;
     }
   }
@@ -299,26 +296,27 @@
 @media (min-width: 65em) {
   .form-container {
     aspect-ratio: 16/7.5 !important;
-
-    .section-title-and-description {
-      flex-basis: 50% !important;
-    }
-
-    &__imgbox {
-      padding: 2.5rem;
-      flex-basis: 50%;
-    }
   }
 }
 @media (min-width: 77em) {
   .form-container {
     aspect-ratio: 16/6.7 !important;
-    gap: 2.5rem;
+    gap: 8rem !important;
+    justify-content: space-between;
+
+    &__imgbox {
+      clip-path: polygon(0 7.5%, 100% 0, 100% 100%, 0% 100%);
+      flex-basis: 45%;
+    }
+
+    &__form {
+      clip-path: inherit !important;
+
+      &__basic-information,
+      &__additional-information,
+      &__success-message {
+        padding: 7rem 3rem;
+      }
+    }
   }
 }
-
-// @media (min-width: 31em) {
-//   .form-container {
-//     aspect-ratio: 16/19;
-//   }
-// }
