--- a/src/components/hamburgerMenu/HamburgerMenu.module.css
+++ b/src/components/hamburgerMenu/HamburgerMenu.module.css
@@ -5,6 +5,7 @@
   padding: 0.75rem 0;
   aspect-ratio: 16/16;
   border-radius: 50%;
+  -webkit-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out; }
   .hamburger-menu:hover, .hamburger-menu:active {
     background-color: #af0061; }
