--- a/src/components/headingDescBtn/HeadingDescBtn.module.css
+++ b/src/components/headingDescBtn/HeadingDescBtn.module.css
@@ -1,7 +1,14 @@
 .heading-desc-btn-textbox {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   color: inherit; }
   .heading-desc-btn-textbox__short-introduction {
     font-family: inherit;
@@ -22,11 +29,21 @@
     margin-bottom: 1.2rem; }
   .heading-desc-btn-textbox__list-of-text {
     list-style-type: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column; }
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column; }
   .heading-desc-btn-textbox .button-group {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     gap: 1rem; }
 
 /*# sourceMappingURL=HeadingDescBtn.module.css.map */
