--- a/src/components/imageButton/ImageButton.module.css
+++ b/src/components/imageButton/ImageButton.module.css
@@ -5,6 +5,7 @@
   padding: 0.5rem;
   aspect-ratio: 16/16;
   border-radius: 50%;
+  -webkit-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out; }
   .image-button:hover {
     background-color: #fff; }
