--- a/src/components/imageDescBtn/ImageDescBtn.module.css
+++ b/src/components/imageDescBtn/ImageDescBtn.module.css
@@ -1,14 +1,21 @@
 .image-description-button__container {
   width: 100%;
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column; }
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column; }
   .image-description-button__container:hover .image-description-button__container__description, .image-description-button__container:active .image-description-button__container__description {
     opacity: 1; }
   .image-description-button__container:hover .image-description-button__container__button-container, .image-description-button__container:active .image-description-button__container__button-container {
     background-color: #222222; }
   .image-description-button__container__background-img {
-    flex-grow: 1;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
     background-position: 50% 50% !important;
     background-size: cover !important;
     background-repeat: no-repeat !important; }
@@ -21,19 +28,28 @@
     line-height: 1.4;
     padding: 2.5rem;
     opacity: 0;
+    -webkit-transition: all 0.2s ease-out;
     transition: all 0.2s ease-out; }
   .image-description-button__container__button-container {
-    flex-basis: 20%; }
+    -ms-flex-preferred-size: 20%;
+        flex-basis: 20%; }
     .image-description-button__container__button-container__button:link, .image-description-button__container__button-container__button:visited {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      justify-content: center;
-      align-items: center;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
       width: 100%;
       height: 100%;
       color: #fff;
       font-size: 1.7rem;
       text-decoration: none;
       background-color: gray;
+      -webkit-transition: all 0.2s ease-out;
       transition: all 0.2s ease-out; }
 
 /*# sourceMappingURL=ImageDescBtn.module.css.map */
