--- a/src/components/linkGroup/LinkGroup.module.css
+++ b/src/components/linkGroup/LinkGroup.module.css
@@ -1,6 +1,11 @@
 .link-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: 2rem; }
   .link-group__heading {
     color: #fff;
@@ -14,8 +19,13 @@
       text-transform: uppercase;
       font-size: inherit; }
   .link-group__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     gap: 1.2rem;
     list-style-type: none; }
     .link-group__list-item-link:link, .link-group__list-item-link:visited {
