--- a/src/components/mobileNavbar/mobileNavigationInnerMenu/MobileNavigationInnerMenu.module.css
+++ b/src/components/mobileNavbar/mobileNavigationInnerMenu/MobileNavigationInnerMenu.module.css
@@ -4,18 +4,27 @@
   min-height: 100vh;
   top: 0;
   left: 0;
-  transform: translateX(100%);
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
   background-color: rgba(175, 0, 97, 0.9);
-  backdrop-filter: blur(1rem);
+  -webkit-backdrop-filter: blur(1rem);
+          backdrop-filter: blur(1rem);
   padding-inline: 3.5rem;
+  -webkit-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out; }
   .mobile-navigation-innermenu__closelisticon-container .closelisticon {
     all: unset;
     margin-left: auto;
     height: 6.5rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center; }
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
   .mobile-navigation-innermenu__closelisticon-container img {
     display: block;
     height: 2.3rem; }
@@ -23,8 +32,12 @@
     padding: 5rem 0 4rem; }
     .mobile-navigation-innermenu__leftcareticon-container .leftcareticon {
       all: unset;
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      align-items: center;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
       font-family: inherit;
       gap: 1.4rem;
       font-size: 1.5rem;
@@ -36,8 +49,13 @@
         aspect-ratio: 16/16; }
   .mobile-navigation-innermenu__list-of-options {
     list-style-type: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     gap: 2.5rem;
     margin-bottom: 3.5rem; }
     .mobile-navigation-innermenu__list-of-options__heading a:link,
@@ -53,9 +71,15 @@
     .mobile-navigation-innermenu__list-of-options__single-option a:visited, .mobile-navigation-innermenu__list-of-options__single-option--main-list span,
     .mobile-navigation-innermenu__list-of-options__single-option--main-list a:link,
     .mobile-navigation-innermenu__list-of-options__single-option--main-list a:visited {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      align-items: center;
-      justify-content: space-between;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: justify;
+          -ms-flex-pack: justify;
+              justify-content: space-between;
       letter-spacing: 0.18rem;
       text-transform: capitalize; }
     .mobile-navigation-innermenu__list-of-options__heading span,
@@ -82,9 +106,11 @@
       height: 2rem; }
 
 .show {
-  transform: translateX(0%) !important; }
+  -webkit-transform: translateX(0%) !important;
+          transform: translateX(0%) !important; }
 
 .previously-shown {
-  transform: translateX(-100%) !important; }
+  -webkit-transform: translateX(-100%) !important;
+          transform: translateX(-100%) !important; }
 
 /*# sourceMappingURL=MobileNavigationInnerMenu.module.css.map */
