--- a/src/components/onlyDesignDiv/OnlyDesignDiv.module.css
+++ b/src/components/onlyDesignDiv/OnlyDesignDiv.module.css
@@ -1,9 +1,18 @@
 .only-design-div {
   padding: 5rem 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center; }
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
   .only-design-div__core {
     width: 15rem;
     height: 0.3rem;
