--- a/src/components/selectBox/SelectBox.module.css
+++ b/src/components/selectBox/SelectBox.module.css
@@ -3,8 +3,13 @@
   .selectbox-container__label {
     margin-bottom: 1.2rem; }
   .selectbox-container label {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
     display: inline-flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     width: 100%;
     font-size: 1.65rem;
     color: #fff;
@@ -28,8 +33,8 @@
     color: inherit;
     letter-spacing: 0.05rem;
     -webkit-box-shadow: none;
-    -moz-box-shadow: none;
     box-shadow: none;
+    -webkit-transition: all 0.2s ease-out;
     transition: all 0.2s ease-out;
     margin-bottom: 1rem; }
     .selectbox-container select * {
