--- a/src/components/submitButton/SubmitButton.module.css
+++ b/src/components/submitButton/SubmitButton.module.css
@@ -3,10 +3,15 @@
   color: #fff;
   font-size: 1.45rem;
   padding: 1.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   letter-spacing: 0.1rem;
   text-decoration: none;
+  -webkit-transition: all 0.2s;
   transition: all 0.2s;
   background-color: #af0061;
   font-family: inherit; }
