--- a/src/components/subscribeMailingList/SubscribeMailingList.module.css
+++ b/src/components/subscribeMailingList/SubscribeMailingList.module.css
@@ -2,69 +2,143 @@
   width: 80%;
   margin: 0 auto;
   margin-bottom: 5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: relative; }
-  .subscribe-mailing-list-container__img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 45%;
-    aspect-ratio: 16/16;
-    background-position: 50% 50% !important;
-    background-repeat: no-repeat !important;
-    background-size: cover !important;
-    border-radius: 50%;
-    border: 0.75rem solid white;
-    transform: translate(-20%, -20%); }
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
   .subscribe-mailing-list-container__textbox {
     width: 100%;
     background-color: #af0061;
-    padding-bottom: 3rem;
+    padding: 2.5rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column; }
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    letter-spacing: 0.02rem;
+    color: #fff; }
     .subscribe-mailing-list-container__textbox__heading {
       font-size: 2.5rem;
-      width: 70%;
-      color: #fff;
-      padding: 2rem 1.25rem 2rem 0.75rem;
+      width: 100%;
+      letter-spacing: inherit;
       font-weight: 500;
       text-align: center;
-      margin-bottom: 1rem;
-      margin-left: auto; }
+      margin-bottom: 1.5rem;
+      line-height: 1.2; }
     .subscribe-mailing-list-container__textbox__details {
       font-size: 1.45rem;
       line-height: 1.4;
-      letter-spacing: 0.02rem;
-      color: #fff;
-      padding: 0 2.5rem;
+      letter-spacing: inherit;
       font-weight: 400;
+      margin-bottom: 1rem; }
+    .subscribe-mailing-list-container__textbox form div[class*="inputbox-container"] {
       margin-bottom: 2rem; }
-    .subscribe-mailing-list-container__textbox form {
-      padding: 0 2.5rem; }
+      .subscribe-mailing-list-container__textbox form div[class*="inputbox-container"] p[class*="inputbox-container__error"] {
+        color: #fff; }
+    .subscribe-mailing-list-container__textbox form input {
+      background-color: #fff !important;
+      color: #af0061 !important;
+      opacity: 0.7; }
+      .subscribe-mailing-list-container__textbox form input:focus {
+        opacity: 1; }
+      .subscribe-mailing-list-container__textbox form input::-webkit-input-placeholder {
+        color: #af0061 !important; }
+      .subscribe-mailing-list-container__textbox form input:-ms-input-placeholder {
+        color: #af0061 !important; }
+      .subscribe-mailing-list-container__textbox form input::-ms-input-placeholder {
+        color: #af0061 !important; }
+      .subscribe-mailing-list-container__textbox form input::placeholder {
+        color: #af0061 !important; }
+    .subscribe-mailing-list-container__textbox form div[class*="submit-button"] {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: row;
+              flex-direction: row;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center; }
+      .subscribe-mailing-list-container__textbox form div[class*="submit-button"] button {
+        border: 0.1rem solid #fff; }
+        .subscribe-mailing-list-container__textbox form div[class*="submit-button"] button:active {
+          background-color: #fff;
+          color: #af0061; }
+        .subscribe-mailing-list-container__textbox form div[class*="submit-button"] button:disabled:active {
+          background-color: transparent; }
+
+@media (min-width: 30em) {
+  .subscribe-mailing-list-container {
+    width: unset;
+    max-width: 42.5rem; } }
+@media (min-width: 48em) {
+  .subscribe-mailing-list-container {
+    max-width: 50rem; }
+    .subscribe-mailing-list-container__textbox {
+      padding: 3rem; }
+      .subscribe-mailing-list-container__textbox__heading {
+        font-size: 2.6rem;
+        margin-bottom: 2.5rem; }
+      .subscribe-mailing-list-container__textbox__details {
+        font-size: 1.45rem;
+        margin-bottom: 1rem; }
+      .subscribe-mailing-list-container__textbox form div[class*="inputbox-container"] {
+        margin-bottom: 2.5rem; }
+      .subscribe-mailing-list-container__textbox form input {
+        font-size: 1.45rem; }
+        .subscribe-mailing-list-container__textbox form input::-webkit-input-placeholder {
+          font-size: 1.45rem; }
+        .subscribe-mailing-list-container__textbox form input:-ms-input-placeholder {
+          font-size: 1.45rem; }
+        .subscribe-mailing-list-container__textbox form input::-ms-input-placeholder {
+          font-size: 1.45rem; }
+        .subscribe-mailing-list-container__textbox form input::placeholder {
+          font-size: 1.45rem; } }
+@media (min-width: 62em) {
+  .subscribe-mailing-list-container {
+    max-width: 60rem; }
+    .subscribe-mailing-list-container__textbox {
+      padding: 4rem 5rem; }
+      .subscribe-mailing-list-container__textbox__heading {
+        margin-bottom: 2rem; }
+      .subscribe-mailing-list-container__textbox__details {
+        font-size: 1.5rem;
+        margin-bottom: 2rem; }
       .subscribe-mailing-list-container__textbox form div[class*="inputbox-container"] {
         margin-bottom: 3rem; }
-        .subscribe-mailing-list-container__textbox form div[class*="inputbox-container"] p[class*="inputbox-container__error"] {
-          color: #fff; }
       .subscribe-mailing-list-container__textbox form input {
-        background-color: #fff !important;
-        color: #af0061 !important;
-        opacity: 0.7; }
-        .subscribe-mailing-list-container__textbox form input:focus {
-          opacity: 1; }
+        font-size: 1.45rem; }
+        .subscribe-mailing-list-container__textbox form input::-webkit-input-placeholder {
+          font-size: 1.45rem; }
+        .subscribe-mailing-list-container__textbox form input:-ms-input-placeholder {
+          font-size: 1.45rem; }
+        .subscribe-mailing-list-container__textbox form input::-ms-input-placeholder {
+          font-size: 1.45rem; }
         .subscribe-mailing-list-container__textbox form input::placeholder {
-          color: #af0061 !important; }
-      .subscribe-mailing-list-container__textbox form div[class*="submit-button"] {
-        display: flex;
-        flex-direction: row;
-        justify-content: center; }
-        .subscribe-mailing-list-container__textbox form div[class*="submit-button"] button {
-          border: 0.1rem solid #fff; }
-          .subscribe-mailing-list-container__textbox form div[class*="submit-button"] button:active {
-            background-color: #fff;
-            color: #af0061; }
-          .subscribe-mailing-list-container__textbox form div[class*="submit-button"] button:disabled:active {
-            background-color: transparent; }
+          font-size: 1.45rem; } }
+@media (min-width: 64em) {
+  .subscribe-mailing-list-container__textbox__heading {
+    font-size: 4rem; }
+  .subscribe-mailing-list-container__textbox__details {
+    font-size: 1.5rem !important; }
+  .subscribe-mailing-list-container__textbox form input {
+    font-size: 1.5rem !important; }
+    .subscribe-mailing-list-container__textbox form input::-webkit-input-placeholder {
+      font-size: 1.5rem !important; }
+    .subscribe-mailing-list-container__textbox form input:-ms-input-placeholder {
+      font-size: 1.5rem !important; }
+    .subscribe-mailing-list-container__textbox form input::-ms-input-placeholder {
+      font-size: 1.5rem !important; }
+    .subscribe-mailing-list-container__textbox form input::placeholder {
+      font-size: 1.5rem !important; } }
 
 /*# sourceMappingURL=SubscribeMailingList.module.css.map */
