--- a/src/components/testimonial/Testimonial.module.css
+++ b/src/components/testimonial/Testimonial.module.css
@@ -1,18 +1,32 @@
 .testimonial {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   margin-bottom: 4rem; }
   .testimonial__img {
-    flex-basis: 38%;
+    -ms-flex-preferred-size: 38%;
+        flex-basis: 38%;
     aspect-ratio: 16/25;
     background-position: 50% 50% !important;
     background-repeat: no-repeat !important;
     background-size: cover !important;
-    flex-shrink: 0 !important; }
+    -ms-flex-negative: 0 !important;
+        flex-shrink: 0 !important; }
   .testimonial__text-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: flex-end; }
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end; }
     .testimonial__text-container__one-liner {
       padding: 1rem 1rem 1.25rem;
       font-size: 1.9rem;
@@ -38,30 +52,49 @@
 @media (min-width: 37em) {
   .testimonial {
     width: 28rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0;
     background-color: #af0061;
-    transform: translateY(5rem);
+    -webkit-transform: translateY(5rem);
+            transform: translateY(5rem);
     opacity: 0; }
     .testimonial__img {
       width: 17.5rem;
       height: 17.5rem;
       border-radius: 50%;
-      flex-basis: unset;
+      -ms-flex-preferred-size: unset;
+          flex-basis: unset;
       aspect-ratio: unset;
       background-size: cover !important;
       border: 0.6rem solid #fff;
       background-position: 50% 0% !important;
-      transform: translateY(-3rem);
+      -webkit-transform: translateY(-3rem);
+              transform: translateY(-3rem);
       margin-bottom: -3rem; }
     .testimonial__text-container {
       padding: 2.5rem;
-      flex-grow: 1;
+      -webkit-box-flex: 1;
+          -ms-flex-positive: 1;
+              flex-grow: 1;
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      flex-direction: column;
-      align-items: stretch;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-box-align: stretch;
+          -ms-flex-align: stretch;
+              align-items: stretch;
       color: #fff; }
       .testimonial__text-container__one-liner {
         padding: 0;
@@ -82,6 +115,7 @@
         font-size: 1.5rem;
         color: inherit;
         font-weight: 500;
-        align-self: flex-end !important; } }
+        -ms-flex-item-align: end !important;
+            align-self: flex-end !important; } }
 
 /*# sourceMappingURL=Testimonial.module.css.map */
