--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -88,7 +88,9 @@
 }
 
 .form-section {
+  width: 100%;
   margin-bottom: 6rem;
+  overflow-x: hidden;
 
   div[class*="plain-description-box"] {
     margin-bottom: 1rem;
@@ -222,10 +224,8 @@
         flex-basis: 50%;
 
         div[class*="showcase__imgbox"] {
-          box-shadow: 0 0 2rem rgba($darkText, 0.2);
           transform: translateX(-10%);
           opacity: 0;
-          transition: all 0.8s ease-out;
         }
       }
 
@@ -237,7 +237,6 @@
         border-inline: none;
         transform: translate(10%, 0%);
         opacity: 0;
-        transition: all 0.8s ease-out;
       }
 
       h3[class*="heading"] {
@@ -249,9 +248,8 @@
       }
 
       p[class*="description"] {
-        line-height: 1.4;
         font-weight: 300;
-        font-size: 1.45rem;
+
         margin-bottom: 1.5rem;
         color: $darkText;
       }
@@ -289,7 +287,9 @@
   }
 
   .form-section {
-    margin-bottom: 10rem;
+    width: 100%;
+    margin-top: 1rem;
+    margin-bottom: $sectionMargin;
 
     div[class*="desktop-center"] {
       width: unset !important;
@@ -317,8 +317,8 @@
     }
   }
 
-  .form-section {
-    margin-top: 1rem;
+  .subscribe-mailing-list {
+    margin-bottom: unset;
   }
 }
 
@@ -341,9 +341,6 @@
 
         div[class*="showcase__imgbox"] {
           box-shadow: 0 0 2rem rgba($darkText, 0.2);
-          transform: translateX(-10%);
-          opacity: 0;
-          transition: all 0.8s ease-out;
         }
       }
 
@@ -353,9 +350,6 @@
         margin: 0;
         border-inline: none;
         left: 3rem;
-        transform: translate(10%, 0%);
-        opacity: 0;
-        transition: all 0.8s ease-out;
       }
 
       h3[class*="heading"] {
@@ -368,10 +362,9 @@
 
       p[class*="description"] {
         line-height: 1.5;
-        font-weight: 300;
+
         font-size: 1.5rem;
         margin-bottom: 2.5rem;
-        color: $darkText;
       }
 
       ul {
@@ -421,8 +414,7 @@
   }
 
   .form-section {
-    max-width: 124rem;
-    padding: 0 2rem;
+    width: 100%;
     margin: 3rem auto 10rem auto;
   }
 }
